<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.eventcreation.EventCreationActivity">

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_container_medium"
        android:layout_marginTop="@dimen/margin_container_large"
        android:fontFamily="@font/font_t7"
        android:text="@string/event_creation"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_xxxlarge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_view_event_create"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@id/button_create_event"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textColor="@color/hwid_auth_button_color_red"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_event_date"
                android:textColor="@color/hwid_auth_button_color_red"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:drawableEnd="@drawable/ic_calendar"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/text_event_date"
                android:inputType="date" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/text_time"
                    android:textColor="@color/hwid_auth_button_color_red"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/duration"
                    android:textColor="@color/hwid_auth_button_color_red"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <EditText
                    android:id="@+id/edit_text_event_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.93"
                    android:cursorVisible="false"
                    android:drawableEnd="@drawable/ic_clock"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/text_event_time"
                    android:inputType="none" />

                <Spinner
                    android:id="@+id/spinner_duration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.07" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/text_category"
                android:textColor="@color/hwid_auth_button_color_red"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinner_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/description"
                android:textColor="@color/hwid_auth_button_color_red"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_event_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:hint="@string/description"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/place"
                android:textColor="@color/hwid_auth_button_color_red"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/edit_text_event_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/event_address"
                android:inputType="none" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_create_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create"
        android:backgroundTint="@color/colorAccentLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>